# weather_tools

./: .codespellrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CLI_README.md  CLI_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_GEOTIFF.md  IMPLEMENTATION_PLAN_metno.md  LICENSE  PLAN_metno_api.md  PY_README.md  README.md  REFACTORING_SUMMARY.md  REVIEW_SILO_MODULES.md  example_geometry_mask.py  index.html  mkdocs.yml  objects.inv  patchedPoint_sites.py  pyproject.toml  rasterio_cog_example.py  test_cli.py
.claude/: settings.local.json
.claude/sessions/: 26-03-31-silo-disk-cache.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: template-sync.yml
.github/workflows/: mkdocs.yml
CHANGELOG/: index.html
api_docs/read_silo/: index.html
cli/: index.html
cli_reference/: index.html
docs/: CHANGELOG.md  cli.md  cli_reference.md  index.md  merge_weather_data.md  metno_api.md  metno_models.md  pre-commit-config.md  silo_api.md
docs/api_docs/: hello_world.md  read_silo.md
docs/notebooks/: example.ipynb  example.py  example_plots.ipynb  example_plots.py  geotiff_download_demo.ipynb  metno_forecast_example.ipynb  output_schema_examples.ipynb  silo_api_examples.ipynb
merge_weather_data/: index.html
metno_api/: index.html
metno_models/: index.html
notebooks/example/: example.ipynb  index.html
notebooks/example_plots/: example_plots.ipynb  index.html
notebooks/geotiff_download_demo/: geotiff_download_demo.ipynb  index.html
notebooks/metno_forecast_example/: index.html  metno_forecast_example.ipynb
notebooks/output_schema_examples/: index.html
notebooks/silo_api_examples/: index.html  silo_api_examples.ipynb
pre-commit-config/: index.html
pyproject/: index.html
search/: search_index.json
silo_api/: index.html
src/weather_tools/: __init__.py  cli.py  config.py  download_silo.py  logging_utils.py  merge_weather_data.py  metno_api.py  metno_models.py  output_schemas.py  read_silo_xarray.py  silo_api.py  silo_geotiff.py  silo_models.py  silo_netcdf.py  silo_variables.py
src/weather_tools/cli/: __init__.py  date_utils.py  geotiff.py  local.py  metno.py  silo.py  utils.py
src/weather_tools/weather_utils/: dew_point.py
tests/: README.md  test_cli_date_utils.py  test_download_manual.sh  test_download_quick.sh  test_download_silo.py  test_merge_weather_data.py  test_methods.py  test_metno_api.py  test_metno_models.py  test_metno_variables.py  test_output_schemas_integration.py  test_read_silo_simple.py  test_read_silo_xarray.py  test_silo_api.py  test_silo_cache.py  test_silo_geotiff.py  test_silo_variables.py
tests/fixtures/: metno_response_compact.json
