[project]
name = "weather_tools"
authors = [{ name = "Harry Eslick", email = "harry.eslick@mmm.com" }]
description = "CLI tool and Python package for extracting and processing SILO weather data"
readme = "README.md"
license = { text = "MIT" }
keywords = ["weather", "climate", "silo", "meteorology", "data-extraction", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Environment :: Console",
]

requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "xarray>=2025.4.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "netcdf4>=1.7.2",
    "dask>=2025.4.1",
    "matplotlib>=3.10.1",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "shapely>=2.0.0",
    "rapidfuzz>=3.14.1",
]

[project.urls]
Homepage = "https://github.com/harryeslick/weather_tools"
Documentation = "https://harryeslick.github.io/weather_tools/"
Repository = "https://github.com/harryeslick/weather_tools.git"
Issues = "https://github.com/harryeslick/weather_tools/issues"

[project.optional-dependencies]
geotiff = [
    "geopandas>=0.14.0",  # For loading GeoJSON geometries
]

[project.scripts]
weather-tools = "weather_tools.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 100
indent-width = 4
extend-exclude = ["./scratch.py"]
force-exclude = true

[tool.ruff.lint]
select = ["I"]  # Enable isort rules

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require network access or real data (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.21",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=0.27.0",
    "bandit[toml]==1.7.5",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pylint_junit",
    "pytest-cov==4.0.0",
    "pytest-mock<3.10.1",
    "pytest-runner",
    "pytest==7.3.1",
    "pytest-github-actions-annotate-failures",
    "plotly>=5.24.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "pbr>=7.0.1",
    "geopandas>=1.1.1",
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "mapclassify>=2.10.0",
    "ipywidgets>=8.1.7",
]
